# SGDyPA-backend

./: .env.example  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json  pyproject.toml
api/v1/: README.md  openapi.yaml
apps/: __init__.py
apps/audit_process/: apps.py  fsm.py  models.py
apps/audit_process/migrations/: 0001_initial.py
apps/documents/: models.py
apps/documents/migrations/: 0001_initial.py  0002_initial.py
apps/findings_capa/: apps.py  models.py
apps/findings_capa/migrations/: 0001_initial.py
apps/identity/: authentication.py  authorization.py  middleware.py  models.py  org_replication.py  replication.py  serializers.py  tasks.py  urls.py  views.py  webhooks.py
apps/identity/migrations/: 0001_initial.py  0003_rbac_roles_capabilities.py  (+4 more)
apps/platform/: api_errors.py  apps.py  error_codes.py  exceptions.py  idempotency.py  middleware.py  models.py  tasks.py  tenancy.py  tests.py  urls.py  views.py
apps/rag/: apps.py
apps/retention_disposition/: apps.py  models.py
apps/trail/: apps.py  models.py  partitioning.py  services.py  signals.py  tests.py
config/: __init__.py  celery.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py  stage.py
docker/keycloak/: Dockerfile  sgdypa-realm.json
docker/keycloak/spi/: pom.xml
docker/minio/: minio-seed.sh
tests/: test_audit_process_fsm.py  test_authorization.py  test_identity_invariants.py  test_models.py  test_partitioning.py  test_platform.py  test_platform_async_jobs.py  test_services.py  test_tasks.py
tests/postgres/: test_tenant_rls.sql
(+23 files in other folders)
